Fix array handling bugs in EncounterData constructor